include_directories(${CMAKE_SOURCE_DIR}/src)
link_directories(${CMAKE_BINARY_DIR}/src)
link_libraries(NerdNet)

find_package(Qt5Widgets)
find_package(Qt5PrintSupport)
find_package(QCustomPlot)
if (Qt5Widgets_FOUND AND Qt5PrintSupport_FOUND AND QCustomPlot_FOUND)
  message(STATUS "building exclusive or example...")
  add_executable(exclusive_or exclusive_or/exclusive_or.cc)
endif ()
